# update-githook-rs

./: Cargo.toml  README.md
.github/workflows/: publish-to-crates.yml  release.yml
src/: main.rs
