[package]
name = "update-githook-rs"
version = "0.1.0"
edition = "2021"
authors = ["Makariy <makariywallet@gmail.com>"]
include = ["src/main.rs", "Cargo.toml", "README.md"]
description =  "Update githook for gitlab repos, written on Rust"
readme = "README.md"
homepage = "https://github.com/ya-makariy/update-githook-rs"
repository = "https://github.com/ya-makariy/update-githook-rs"
license = "MIT"
keywords = ["git", "gitlab", "githook"]
categories= ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
